syntax = "proto3";

option csharp_namespace = "NewsService";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package news;

service NewsFetcher {
    rpc GetAllArticles (google.protobuf.Empty) returns (stream ArticleResponse);
    rpc GetArticle (ArticleRequest) returns (ArticleResponse);
}

message ArticleRequest {
    string ArticleKey = 1;
}

enum StatusCode {
    Failure = 0;
    Fetching = 1;
    Ok = 2;
}

message ProtoMinioFile {
    string Bucket = 1;
    string Directory = 2;
    string FileName = 3;
}

message Status {
    string Message = 1;
    StatusCode Code = 2;
}

message Article {
    string Key = 1;
    string Title = 2;
    google.protobuf.Timestamp  Fetched = 3;
    google.protobuf.Timestamp  Published = 4;
    ProtoMinioFile Image = 5;
    string Content = 6;
    string Source = 7;
}

message ArticleResponse {
    oneof response {
        Article Article = 1;
        Status Status = 2;
    }
}